# video2txt

./: .gitignore  README.md  pyproject.toml
video2txt/: ai.py  convert.py  webm2avi.py
