[project]
name = "video2txt"
version = "0.1.0"
description = ""
authors = [
    {name = "bcExpt1123",email = "bcExpt1123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "moviepy (>=2.1.2,<3.0.0)",
    "speechrecognition (>=3.14.1,<4.0.0)"
    "openai-whisper"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
